--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
 
 body {
-  background: yellow;
+  background: #04082b;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-weight: bold;
 }
 
 #leftpanel {
-  background: green;
+  background: #04082b; /*green;*/
   height: 600px;
   width: 300px;
   float: left;
   display: inline;
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  margin-left: 40px;
 }
 
 #logo {
@@ -17,63 +23,96 @@ body {
 }
 
 main {
-  background: red;
+  background: #04082b; /*red;*/
   height: 600px;
   width: 900px;
   float: right;
   align: inline-block;
+
 }
 
 #toppanel{
-  background: pink;
-  display: block;
-  margin-top: 50px;
+  background: #04082b; /*pink;*/
+ /* position: absolute;*/
+  width: 600px;
+  margin-top: 100px;
+
 }
 
-td {
-  background: blue;
+li {
+  background: linear-gradient(#081681,#1975ff);
   height: 60px;
   width: 60px;
-  border: 2px solid black;
-  margin: 0 auto;
+  border: 10px solid #04082b;
   display: inline;
   float: left;
-
+  color: white;
+  font-size: 30px;
+  /*text-align: center;*/
 }
 
-#answerpanel{
-  background: brown;
-  display: block;
-  margin-top: 100px;
+#targetpanel{
+  background: #04082b; /*brown;*/
+  width: 700px;
+  margin-top: 150px;
+  position: absolute;
+  text-align: center;
+}
+
+.buttons{
+  height: 50px;
+  width: 100px;
+  font-weight: bold;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  color: white;
+  background: linear-gradient(#04082b, #081681);
+  padding-bottom: 10px;
+  border: none;
+  margin: 10px;
 }
 
 #bigbutton{
   float: left;
-  height: 50px;
-  width: 100px;
 }
+
 #smallbutton{
   float: left;
-  height: 50px;
-  width: 100px;
 }
 
 #targetbox{
-  background: white;
-  height: 80px;
+  background: linear-gradient(#081681,#1975ff);
+  height: 90px;
   width:150px;
   display: inline-block;
-  margin-left: 150px;
+  border: 2px solid black;
+  color: white;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 22px;
 }
 
 #targetbutton{
   float: right;
-  height: 50px;
-  width: 100px;
 }
 
 #solvebutton{
   float: right;
-  height: 50px;
-  width: 100px;
 }
+
+#clearbutton{
+  float: right;
+  margin-right: -90px;
+  margin-top: 10px;
+  position: relative;
+}
+
+#solvepanel{
+  background: #04082b; /*orange;*/
+  width: 700px;
+  margin-top:300px;
+  padding-bottom: 200px;
+  position: absolute;
+  text-align: center;
+}
+
+
